src/modules/85-cv/pages/slos/CVSLOsListingPage.module.scss
/*
 * Copyright 2022 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

$headerHeight: 146px;

.pageBody {
  --page-header-height: #{$headerHeight} !important;

  .sloRiskFilterCard {
    padding: var(--spacing-none) !important;
    margin-right: var(--spacing-medium);
    margin-bottom: var(--spacing-medium);
    width: calc(var(--card-width) - 50px);
  }

  .sloCardContainer {
    display: grid;
    grid-gap: var(--spacing-medium);
    grid-template-columns: repeat(2, 1fr);

    .sloCard {
      margin-bottom: none;
      background-color: var(--primary-light-hover);
    }
  }

  .noSloData {
    width: 500px !important;
  }

  hr {
    width: 100%;
    border: none;
    border-top: 1px solid var(--grey-200);
    margin: var(--spacing-medium) 0;
  }

  .sloFiltersRow1 {
    margin-bottom: var(--spacing-medium) !important;
    .createSLOInMonitoredService {
      margin-right: var(--spacing-medium) !important;
    }
  }

  .sloDropdownFilters {
    border-left: 1px solid var(--grey-200) !important;
    padding-left: var(--spacing-medium) !important;
  }
}

.sloFilters {
  --primary-bg: var(--grey-0) !important;
  align-items: center;
  p {
    margin-bottom: var(--spacing-xsmall) !important;
  }
}

.flexGrowOne {
  flex-grow: 1;
}

// SLOCardHeader

.menuIcon {
  margin-left: -2px !important;
}

.sloTags {
  background-color: var(--grey-100) !important;
  border: none !important;
  font-weight: 500;
}

.sloGlanceCard {
  border-radius: var(--spacing-small);
}

// SLOCardContent

.pillToggle {
  :global(.PillToggle--item) {
    width: 100px !important;
  }
}

.currentTimeRange {
  border-radius: 4px;
  padding: 4px var(--spacing-small) !important;
  margin-right: var(--spacing-small);
  background-color: var(--grey-100) !important;
  box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16);
}

.cardSloAndSli {
  width: 120px;
  padding: var(--spacing-small) !important;
  border-radius: var(--spacing-small);
}

.cardSloAndSliForCardView {
  width: 180px;
  height: 80px;
  padding: var(--spacing-large) !important;
  border-radius: var(--spacing-small);
}

.errorBudgetGaugeContainer {
  position: relative;
  min-width: 200px;
}

.sloCardSpinner {
  flex-direction: row !important;
  justify-content: center;
  align-items: center !important;
  background: var(--primary) !important;
  width: fit-content !important;
  padding: var(--spacing-2) var(--spacing-4) !important;
  border-radius: var(--spacing-3);
  color: var(--grey-0) !important;

  > * + * {
    --layout-spacing: 0px;
    margin-left: var(--spacing-3) !important;
    color: var(--grey-0) !important;
    font-size: var(--font-size-normal) !important;
  }

  svg {
    width: 20px;
    g path {
      color: var(--grey-0);
    }
  }
}

.clearButton {
  align-self: flex-end;
}

.timelineSlider {
  height: 80% !important;
}

.titleInSloTable {
  white-space: nowrap !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
}

.errorBudgetRisk {
  white-space: nowrap !important;
  font-size: var(--font-size-small) !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  padding: 0 var(--spacing-xsmall) !important;
  height: 26px;
  font-weight: 700 !important;
  line-height: 24px !important;
  width: fit-content;
  border-radius: var(--spacing-2);
  padding: var(--spacing-small) !important;
}

.errorBudgetRemainingContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.sloListingPageHeader {
  height: auto !important;
}

.errorBudgetParent {
  align-items: center !important;
}

.errorBudgetRemaining {
  padding: var(--spacing-2) !important;
  border-radius: var(--spacing-2);
  background-color: var(--grey-100) !important;
}

.main {
  position: relative;
  .slider {
    height: 85% !important;
  }
}

.annotationIcon {
  cursor: pointer;
}

.addAnnotationLink {
  padding-left: var(--spacing-xsmall) !important;
}

.burndownWrapper {
  padding-left: 62px !important;
}

.sloWrapper {
  padding-left: 75px !important;
}

